<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="20dp"
        android:text="@string/que_vamos_hacer_hoy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/textCliente"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="539dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_cliente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textNumCuenta"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="447dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/no_cuenta"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCliente"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textSaldoActual"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="386dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/saldo_actual"
        android:inputType="numberSigned"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumCuenta"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnAdicionarSaldo"
        android:layout_width="349dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:layout_marginBottom="12dp"
        android:text="@string/adicionar_saldo"
        app:layout_constraintBottom_toTopOf="@+id/btnRetirarSaldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSaldoActual"
        app:layout_constraintVertical_bias="0.47000003" />

    <Button
        android:id="@+id/btnRetirarSaldo"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="227dp"
        android:layout_marginRight="227dp"
        android:layout_marginBottom="23dp"
        android:text="@string/retirar_saldo"
        app:layout_constraintBottom_toTopOf="@+id/btnTransferencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdicionarSaldo" />

    <Button
        android:id="@+id/btnTransferencia"
        android:layout_width="356dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="227dp"
        android:layout_marginRight="227dp"
        android:layout_marginBottom="174dp"
        android:text="@string/transferencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRetirarSaldo" />
</androidx.constraintlayout.widget.ConstraintLayout>